--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     #map { height: 70vh; }
     input, button { padding: 10px; font-size: 16px; margin: 5px; }
     button { background: #4CAF50; color: white; border: none; border-radius: 6px; cursor: pointer; }
-    #info { padding: 10px; }
+    #info, #guide { padding: 10px; }
+    #guide { display: none; background: #fff; border: 1px solid #ccc; border-radius: 6px; margin: 10px; text-align: left; max-width: 600px; margin-left: auto; margin-right: auto; }
   </style>
 </head>
 <body>
@@ -27,6 +28,21 @@
   <input id="username" placeholder="Tên người dùng">
   <button onclick="startShare()">Tôi muốn chia sẻ vị trí</button>
   <button onclick="startView()">Tôi muốn xem vị trí người khác</button>
+  <button onclick="toggleGuide()">📘 Hướng dẫn sử dụng</button>
+  <div id="guide">
+    <h3>📘 Cách sử dụng</h3>
+    <p><strong>A chia sẻ vị trí cho B:</strong></p>
+    <ul>
+      <li>A nhập một tên bất kỳ (ví dụ: <em>abc</em>) và nhấn “Tôi muốn chia sẻ vị trí”.</li>
+      <li>B ở thiết bị khác nhập đúng tên đó (<em>abc</em>) và nhấn “Tôi muốn xem vị trí người khác”.</li>
+      <li>B sẽ thấy vị trí của A thay đổi theo thời gian thực.</li>
+    </ul>
+    <p><strong>Lưu ý:</strong></p>
+    <ul>
+      <li>A cần cấp quyền truy cập vị trí chính xác cho trình duyệt.</li>
+      <li>A phải giữ trang web luôn mở. Nếu tắt màn hình hoặc chuyển tab, việc chia sẻ sẽ tạm dừng.</li>
+    </ul>
+  </div>
   <div id="info">Nhập tên và chọn chế độ</div>
   <div id="map"></div>
 
@@ -68,11 +84,9 @@
           const lng = pos.coords.longitude;
           const timestamp = Date.now();
 
-          // Cập nhật bản đồ
           marker.setLatLng([lat, lng]).bindPopup("Vị trí hiện tại").openPopup();
           map.setView([lat, lng], 16);
 
-          // Gửi lên Firebase
           db.ref("locations/" + username).set({ lat, lng, timestamp });
 
           document.getElementById("info").innerText =
@@ -105,6 +119,11 @@
           document.getElementById("info").innerText = "Không có dữ liệu vị trí cho người dùng này.";
         }
       });
+    }
+
+    function toggleGuide() {
+      const guide = document.getElementById("guide");
+      guide.style.display = guide.style.display === "none" ? "block" : "none";
     }
 
     window.onload = initMap;
